gnubiff -- History of visible changes.

Copyright (C) 2000-2009 Nicolas Rougier <Nicolas.Rougier@loria.fr> and
              2004-2009 Robert Sowada <sowadart@gmx.de>.
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.3.0
 * Robert Sowada
   - Changed version to 2.3.0 (from version 2.2.5)
   - Port (from gnubiff 2.2.5 CVS) of about dialog closing bugfixes
   - Added Sebastian Breier to contributors
   - Port (from gnubiff 2.2.5 CVS) of bugfix for determining initial image size
   - Added Felipe Csaszar to contributors
   - Changed copyright years to 2008
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Added Daniel Nylander to contributors
   - Feature: Better handling of messages with a false character set in the
        header
   - Feature: Positioning of text relative to the image
   - Feature: Positioning of text depending on panel's orientation (this
        should close debian bug #367649 reported by Bas Zoetekouw and a feature
        request by Tomas Dohnal)
   - Added Bas Zoetekouw and Tomas Dohnal to contributors
   - Bugfix: Infinite loop when specifing a directory as configuration file
   - Feature: Allowing popup getting the keyboard focus without getting it
        automatically when shown (new option "popup/popup_accept_focus")
   - Feature: More popup options can be configured via the gui
   - Feature: More applet options can be configured via the gui
   - Cleanup of signal code (as preparation for the Jonathan Hitchcock patch)
   - Feature: Showing/Hiding the popup via SIGUSR signals (thanks to Jonathan
        Hitchcock for providing a patch)
   - Bugfix: Accessing freed memory (when converting a wrong character set)
   - Compatibility with gcc 4.3 (thanks to Martin Michlmayr for providing a
        patch; this was debian bug #420969 for version 2.2.6)
   - Feature: Deleting messages (pop protocol; this is feature request #1074262